2006-06-08  Fred Fish  <fnf@specifix.com>

	* mips/idt.ld, mips/idt32.ld, mips/idt64.ld, mips/nullmon.ld,
	mips/pmon.ld:  Keep special sections generated by mips gcc.

2006-06-05  Shaun Jackman  <sjackman@gmail.com>

	* arm/linux-syscalls0.S (reboot): Remove.
	* arm/linux-syscalls1.c (reboot): New function.

2006-06-05  Shaun Jackman  <sjackman@gmail.com>

	* arm/syscalls.c (kill) [ARM_RDI_MONITOR]: Use the signal
	argument to choose an ADP exception reason.
	* arm/libcfunc.c (abort): Remove this function.

2006-05-30  Shaun Jackman  <sjackman@gmail.com>

	* arm/Makefile.in: Add Linux syscall interface.
	* arm/linux-crt0.S: New file.
	* arm/linux-syscall.h: New file.
	* arm/linux-syscalls0.S: New file.
	* arm/linux-syscalls1.c: New file.

2006-05-23  Fred Fish  <fnf@specifix.com>

	* mips/configure.in: Change mipsisa64-*-* to
	mipsisa64*-*-* to catch minor variations like
	mipsisa64sb1.
	* mips/configure: Regenerated.

2006-05-10  Jeff Johnston  <jjohnstn@redhat.com>

	* Makefile.in: Pass some additional flags in FLAGS_TO_PASS.
	* configure.in: Add additional flags when creating Makefile.
	* configure: Regenerated.
	* arm/configure
	* arm/configure.in: Set with_multisubdir when creating Makefile.
	* cris/configure.in: Ditto.
	* d30v/configure.in: Ditto.
	* frv/configure.in: Ditto.
	* i386/configure.in: Ditto.
	* iq2000/configure.in: Ditto.
	* libnosys/configure.in: Ditto.
	* m32c/configure.in: Ditto.
	* m32r/configure.in: Ditto.
	* m68hc11/configure.in: Ditto.
	* m68k/configure.in: Ditto.
	* mcore/configure.in: Ditto.
	* mips/configure.in: Ditto.
	* mn10200/configure.in: Ditto.
	* mn10300/configure.in: Ditto.
	* mt/configure.in: Ditto.
	* pa/configure.in: Ditto.
	* rs6000/configure.in: Ditto.
	* sparc/configure.in: Ditto.
	* cris/configure: Regenerated.
	* d30v/configure: Ditto.
	* frv/configure: Ditto.
	* i386/configure: Ditto.
	* iq2000/configure: Ditto.
	* libnosys/configure: Ditto.
	* m32c/configure: Ditto.
	* m32r/configure: Ditto.
	* m68hc11/configure: Ditto.